# rag-financial-insights

./: .env.example  .gitignore  README.md  app.py
.github/workflows/: ci.yml  deploy-pages.yml  deploy-workers.yml
backend/: app.py  pyproject.toml  requirements.txt
backend/notebooks/: walkthrough.ipynb
backend/scripts/: scale_to_2k.py
backend/src/: __init__.py
backend/src/agents/: base.py  critic_agent.py  extractor_agent.py  reconciler_agent.py  retriever_agent.py
backend/src/backtesting/: engine.py  signal_aligner.py  visualizer.py
backend/src/extraction/: signal_extractor.py  text_cleaner.py
backend/src/publishing/: kv_publisher.py  r2_publisher.py
backend/src/rag/: chunker.py  embedder.py  hybrid_retriever.py
backend/tests/: test_signal_aligner.py  test_signal_extractor.py
docs/: ARCHITECTURE.md  MULTI_AGENT.md  SCALING.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  wrangler.toml
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AgentTraceViewer.tsx  FilingTable.tsx  ReturnsChart.tsx  SignalCard.tsx
frontend/src/lib/: api.ts  (+1 more)
scripts/: run_pipeline.py
shared/: README.md
shared/codegen/: gen_pydantic.py  gen_typescript.ts
shared/schema/: backtest.schema.json  filing.schema.json  signal.schema.json
src/backtesting/: factor_model.py
src/evaluation/: earnings_eval.py
src/extraction/: edgar_fetcher.py  price_fetcher.py
tests/: test_backtesting_engine.py  test_text_cleaner.py
workers/: package-lock.json  package.json  wrangler.toml
workers/src/: index.ts
(+11 files in other folders)
